<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/findLayout"
    android:background="@color/defaultBkgrd">


    <Button
        android:layout_width="@dimen/btnWidth"
        android:layout_height="@dimen/btnHeight"
        android:gravity="bottom|center"
        android:paddingBottom="@dimen/textPadd"
        android:text="@string/search_btn"
        android:id="@+id/searchBtn"
        android:onClick="findBooks"
        android:background="@drawable/orange_selector"
        android:layout_marginBottom="@dimen/paddMore"
        android:layout_above="@+id/homeBtn"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <Button
        android:layout_width="@dimen/btnWidth"
        android:layout_height="@dimen/btnHeight"
        android:gravity="bottom|center"
        android:paddingBottom="@dimen/textPadd"
        android:text="@string/home_btn"
        android:id="@+id/homeBtn"
        android:onClick="activateMain"
        android:background="@drawable/blue_selector"
        android:layout_marginBottom="@dimen/btmMargin"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />




    <ImageView
        android:layout_width="@dimen/imgWdth"
        android:layout_height="@dimen/imgWdth"
        android:background="@drawable/ic_bkstack"
        android:id="@+id/leftImg"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/book_finder"
        android:id="@+id/textView5"

        android:layout_above="@+id/ftitleET"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="67dp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ftitleET"
        android:layout_below="@+id/leftImg"
        android:layout_marginTop="@dimen/edgeMargin"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fauthorET"
        android:layout_below="@+id/ftitleET"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/paddMore"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fgenreET"
        android:layout_below="@+id/fauthorET"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/edgeMargin"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/title"
        android:id="@+id/textView6"
        android:layout_below="@+id/ftitleET"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/author"
        android:id="@+id/textView7"
        android:layout_below="@+id/fauthorET"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/genre"
        android:id="@+id/textView8"
        android:layout_below="@+id/fgenreET"
        android:layout_alignStart="@+id/textView7"
        android:textStyle="bold" />

</RelativeLayout>
