<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/prefLayout"
    android:background="@color/defaultBkgrd">

    <Button
        android:layout_width="@dimen/btnWidth"
        android:layout_height="@dimen/btnHeight"
        android:gravity="bottom|center"
        android:paddingBottom="@dimen/textPadd"
        android:text="@string/setting1"
        android:id="@+id/settings_btn_1"
        android:onClick="setting_1_Img"
        android:background="@drawable/orange_selector"

        android:layout_marginLeft="@dimen/edgeMargin"
        android:layout_marginRight="@dimen/smallMargin"
        android:layout_above="@+id/settings_btn_2"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/smallMargin"
        android:textStyle="bold" />
    <Button
        android:layout_width="@dimen/btnWidth"
        android:layout_height="@dimen/btnHeight"
        android:gravity="bottom|center"
        android:paddingBottom="@dimen/textPadd"
        android:text="@string/setting2"
        android:id="@+id/settings_btn_2"
        android:onClick="setting_2_Img"
        android:background="@drawable/blue_selector"
        android:layout_marginLeft="@dimen/smallMargin"
        android:layout_below="@+id/settings_btn_3"
        android:layout_alignEnd="@+id/settings_btn_1"
        android:textStyle="bold" />
    <Button
        android:layout_width="@dimen/btnWidth"
        android:layout_height="@dimen/btnHeight"
        android:gravity="bottom|center"
        android:paddingBottom="@dimen/textPadd"
        android:text="@string/setting3"
        android:id="@+id/settings_btn_3"
        android:onClick="setting_3_Img"
        android:background="@drawable/red_selector"

        android:layout_marginRight="@dimen/edgeMargin"
        android:layout_marginLeft="@dimen/smallMargin"
        android:layout_above="@+id/settings_btn_4"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="5dp"
        android:textStyle="bold" />


    <Button

        android:layout_width="@dimen/btnWidth"
        android:layout_height="@dimen/btnHeight"
        android:gravity="bottom|center"
        android:paddingBottom="@dimen/textPadd"
        android:text="@string/setting4"
        android:id="@+id/settings_btn_4"
        android:onClick="setting_4_img"
        android:layout_marginBottom="@dimen/btmMargin"
        android:background="@drawable/green_selector"
        android:layout_marginRight="@dimen/smallMargin"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/settings_btn_3"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/previewSetting"
        android:src="@drawable/ic_bksstnd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/edgeMargin"
        android:layout_above="@+id/settingThemeBtns"
        android:layout_below="@+id/nameInput" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nameInput"
        android:layout_marginRight="@dimen/smallMargin"
        android:layout_marginLeft="@dimen/smallMargin"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/largeMargin"
        android:layout_alignParentStart="true"
        android:textSize="24sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/thefontsize"
        android:text="@string/hint"
        android:id="@+id/nameLabel"
        android:textStyle="bold"
        android:layout_below="@+id/nameInput"
        android:layout_centerHorizontal="true" />


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settingThemeBtns"
        android:text="@string/settingTheme"
        android:layout_above="@id/settings_btn_1"
        android:layout_alignStart="@+id/nameInput"
        android:textSize="@dimen/thefontsize"
        android:paddingTop="@dimen/textPadd"
        android:paddingBottom="@dimen/paddMore"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/smallMargin"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settingPg"
        android:id="@+id/setLabel"

        android:layout_marginTop="51dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:paddingLeft="@dimen/paddMore"
        android:layout_below="@+id/nameLabel"
        android:layout_alignStart="@+id/nameLabel" />
</RelativeLayout>
