<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/addBkLayout"
    android:background="@color/defaultBkgrd">





    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:background="@drawable/ic_bksstnd"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="@dimen/edgeMargin"
        android:layout_marginRight="@dimen/edgeMargin"
        android:layout_above="@+id/AtitleET" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/addBk"
        android:id="@+id/addBkTitle"
        android:paddingRight="@dimen/btmMargin"
        android:paddingTop="@dimen/paddMore"

        android:textStyle="bold"

        android:layout_marginBottom="73dp"
        android:layout_above="@+id/AtitleET"
        android:layout_alignEnd="@+id/titleTxtViewLabel" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/AtitleET"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:paddingTop="@dimen/textPadd"
        android:layout_above="@+id/titleTxtViewLabel" />



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/AuthorET"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/authorTextViewLabel" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/GenreET"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/genTextViewLabel"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/title"
        android:id="@+id/titleTxtViewLabel"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/AuthorET"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/author"
        android:id="@+id/authorTextViewLabel"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/GenreET"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/genre"
        android:id="@+id/genTextViewLabel"
        android:layout_above="@+id/submitBookButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:textStyle="bold" />


    <Button
        android:layout_width="@dimen/btnWidth"
        android:layout_height="@dimen/btnHeight"
        android:gravity="bottom|center"
        android:paddingBottom="@dimen/textPadd"
        android:text="@string/submit_btn"
        android:id="@+id/submitBookButton"
        android:onClick="onSubmit"
        android:background="@drawable/green_selector"

        android:layout_marginBottom="@dimen/btmMargin"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />


</RelativeLayout>
