<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/actMain"
    android:background="@color/defaultBkgrd">

    <Button
        android:layout_width="@dimen/btnWidth"
        android:layout_height="@dimen/btnHeight"
        android:gravity="bottom|center"
        android:paddingBottom="@dimen/textPadd"
        android:text="@string/view_book_btn"
        android:id="@+id/mainBtn_1"
        android:onClick="launchShowBooks"
        android:background="@drawable/orange_selector"
        android:layout_above="@+id/mainBtn_2"
        android:layout_alignStart="@+id/mainBtn_2"
        android:textAlignment="center"
        android:textStyle="bold" />

    <Button
        android:layout_width="@dimen/btnWidth"
        android:layout_height="@dimen/btnHeight"
        android:gravity="bottom|center"
        android:paddingBottom="@dimen/textPadd"
        android:text="@string/add_book"
        android:id="@+id/mainBtn_2"
        android:onClick="launchAddBook"
        android:background="@drawable/blue_selector"
        android:layout_above="@+id/mainBtn_3"
        android:layout_alignStart="@+id/mainBtn_3"
        android:textStyle="bold" />


    <Button
        android:layout_width="@dimen/btnWidth"
        android:layout_height="@dimen/btnHeight"
        android:gravity="bottom|center"
        android:paddingBottom="@dimen/textPadd"
        android:text="@string/find_book"
        android:id="@+id/mainBtn_3"
        android:onClick="launchFindBook"
        android:background="@drawable/green_selector"
        android:layout_marginBottom="@dimen/btmMargin"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_mainbkshelf"
        android:id="@+id/mainImg"
        android:layout_marginLeft="@dimen/edgeMargin"
        android:layout_marginRight="@dimen/edgeMargin"
        android:layout_above="@+id/mainBtn_2"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/largeMargin" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginRight="@dimen/smallMargin"
        android:textColor="@color/defaultBlue"
        android:layout_marginLeft="@dimen/smallMargin"
        android:paddingBottom="@dimen/textPadd"
        android:paddingTop="@dimen/textPadd"
        android:text="@string/app_name_hp"
        android:id="@+id/textView4"
        android:textSize="40sp"
        android:background="@color/defaultLtBlue"
        android:layout_marginTop="46dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />




</RelativeLayout>
